--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
       <!-- Герой -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
@@ -112,23 +109,31 @@
           <ul class="team-list">
             <li class="team-item">
               <img src="./images/img1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
-              <h3 class="team-name">Игорь Демьяненко</h3>
-              <p class="team-profession" lang="en">Product Designer</p>
+              <div class="team-item-box">
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p class="team-profession" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
-              <h3 class="team-name">Ольга Репина</h3>
-              <p class="team-profession" lang="en">Frontend Developer</p>
+              <div class="team-item-box">
+                <h3 class="team-name">Ольга Репина</h3>
+                <p class="team-profession" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
-              <h3 class="team-name">Николай Тарасов</h3>
-              <p class="team-profession" lang="en">Marketing</p>
+              <div class="team-item-box">
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p class="team-profession" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
-              <h3 class="team-name">Михаил Ермаков</h3>
-              <p class="team-profession" lang="en">UI Designer</p>
+              <div class="team-item-box">
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p class="team-profession" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
